Fix site logo vertical alignment for smaller screens

--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -90,7 +90,7 @@
     // For screens smaller than medium
     @include breakpoint(max-width $medium) {
         max-height: 20px;
-        transform: translateY(-2px);
+        transform: translateY(-4px);
     }
 }
 
